fix header alignment

--- a/frontend/src/components/molecules/Header.css
+++ b/frontend/src/components/molecules/Header.css
@@ -1,9 +1,3 @@
-.pulse-fx {
-    color: skyblue;
-    font-size: x-large;
-    height: 5px;
-}
-
 .pulse-container {
     display: flex;
     flex-direction: column;
@@ -19,10 +13,6 @@
 .header {
     display: flex;
     justify-content: space-between;
-    height: 70px;
-}
-
-.icons {
-    font-size: small;
-    color: white;
+    align-items: center;
+    
 }
